# adventcode

2020/: README.md  test_all.sh
2020/p01/: Cargo.toml
2020/p03/: Cargo.toml
2020/p06/: Cargo.toml
2020/p08/: Cargo.toml
2020/p09/: Cargo.toml
2020/p11/: Cargo.toml
2020/p13/: Cargo.toml
2020/p14/: Cargo.toml
2020/p15/: Cargo.toml
2020/p17/: Cargo.toml
2020/p19/: Cargo.toml
2020/p20/: Cargo.toml
2020/p21/: Cargo.toml
2020/p23/: Cargo.toml
2021/p01/: main.hs
2021/p02/: main.hs
2021/p03/: main.hs
2021/p04/: CHANGELOG.md  p04.cabal
2021/p05/: CHANGELOG.md  p05.cabal
2021/p06/: CHANGELOG.md  main.hs  p06.cabal
2021/p07/: CHANGELOG.md  p07.cabal
2021/p08/: CHANGELOG.md  p08.cabal
2021/p09/: CHANGELOG.md  p09.cabal
2021/p10/: CHANGELOG.md  p10.cabal
2021/p11/: CHANGELOG.md  p11.cabal
2021/p12/: CHANGELOG.md  p12.cabal
2021/p13/: CHANGELOG.md  p13.cabal
2021/p14/: CHANGELOG.md  p14.cabal
2021/p14/app/: Main.hs
2021/p15/: CHANGELOG.md  p15.cabal
2021/p16/: CHANGELOG.md  p16.cabal
2021/p17/: CHANGELOG.md  input.txt  p17.cabal  test_input.txt
2021/p18/: CHANGELOG.md  p18.cabal
2021/p19/: CHANGELOG.md  p19.cabal
2021/p20/: CHANGELOG.md  p20.cabal
2021/p21/: CHANGELOG.md  p21.cabal
2022/p01/: Cargo.toml
2022/p02/: Cargo.toml
2022/p03/: Cargo.toml
2022/p04/: Cargo.toml
2022/p05/: Cargo.toml
2022/p06/: Cargo.toml
2022/p07/: Cargo.toml
2023/: .gitignore
2023/p01/: CHANGELOG.md  p01.cabal
2023/p02/: p02.cabal
2023/p02/app/: Main.hs
p01/src/: main.rs
p02/: Cargo.toml
p02/src/: main.rs
p03/src/: main.rs
p04/: Cargo.toml
p04/src/: main.rs
p05/: Cargo.toml
p07/: Cargo.toml
p10/: Cargo.toml
p12/: Cargo.toml
p16/: Cargo.toml
p17/: Cargo.toml
p18/: Cargo.toml
p22/: Cargo.toml
p24/: Cargo.toml
p25/: Cargo.toml
(+62 files in other folders)
