cabal-version:      2.4
name:               p14
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Ryan Collingham
maintainer:         ryan@tokencard.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable p14
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        containers ^>=0.6.5.1,
        split ^>=0.2.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
